Play card method + tests